# grok-chat-web

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOFF.md  LICENSE  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  start.sh
app/: __init__.py  acp_bridge.py  conversations.py  main.py
data/conversations/: 3efcab14-3200-4bdf-b169-4e5cc9c39506.json  62bef90c-87c2-482f-b712-2c8403189b2e.json  7d2753ed-865a-488a-9951-fa5b979443c7.json  9259c6ae-4661-4e98-9a44-8810644f011c.json  f4ae9e92-dbdb-4d08-b011-71c6c67d807d.json
deploy/: grok-chat-web.example.service  grok-chat-web.service
static/: app.js  index.html  style.css
